--- a/package.json
+++ b/package.json
@@ -1,24 +1,14 @@
 {
-  "name": "miniature-eureka",
+  "name": "note-taker",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://https://github.com/asiajcrew/Note-Taker"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://https://github.com/asiajcrew/Note-Taker/issues"
-  },
-  "homepage": "https://https://github.com/asiajcrew/Note-Taker#readme",
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.16.4"
   }
 }
